--- a/week 2-1-Layouts in JetpackCompose/LayoutsCodelab/app/build.gradle
+++ b/week 2-1-Layouts in JetpackCompose/LayoutsCodelab/app/build.gradle
@@ -38,7 +38,8 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.21'
+        // Remove kotlinCompilerVersion from here
+        // kotlinCompilerVersion '1.5.21'
     }
     packagingOptions {
         resources {
@@ -62,4 +63,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    // Custom
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 }
